--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
+    "ramda": "^0.27.1",
     "vue-slick-carousel": "^1.0.5"
   },
   "devDependencies": {
+    "@nuxtjs/composition-api": "^0.24.6",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
